src/pages/ProjectPage/ProjectPage.css
.project-not-found {
    margin-top: 90px;
    text-align: center;
    font-size: 2.6rem;
    font-family: "Source Sans Pro";
}

.project-page {
    background: var(--background-light-color);
    text-align: center;
    font-family: "Source Sans Pro";
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding-bottom: 60px;
}

.project-page > section {
    width: 50%;
    min-width: 500px;
}

.project-page-title, .project-page-subtitle {
    text-transform: uppercase;
    font-weight: 800;
}

.project-page-title {
    padding-top: 40px;
    font-size: calc(1.95rem + 1.35vw);
    letter-spacing: 2px;
}

.project-page-links {
    width: max-content;
    margin: 0 auto;
    margin-top: calc(10px + 0.2vw);

    background-color: #dcdcdc;
    padding: calc(12px - 0.1vw) calc(17px - 0.15vw);
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.10);

    display: flex;
    justify-content: center;
    gap: 20px;
}

.project-page-links > a {
    color: inherit;
    text-decoration: none;
    font-size: calc(1.9rem + 0.1vw);
    transition: scale 100ms ease, color 200ms ease;
}

.project-page-links > a:hover {
    cursor: pointer;
    color: var(--highlight-color);
    scale: 1.05;
}

.project-page-subtitle {
    letter-spacing: 1px;
    font-size: calc(1.6rem + 0.8vw);
    margin-top: calc(30px + 1.5vw);
}

#project-images-subtitle {
    margin-top: 40px;
}

.project-page-technologies {
    width: 75%;
    max-width: 800px;
    margin: 0 auto;
    margin-top: calc(12px + 0.7vw);

    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: calc(10px + 0.1vw);
}

.project-page-technology {
    background: var(--navbar-color);
    color: var(--text-dark-color);
    letter-spacing: 1px;
    font-family: Lato;
    padding: 9px 17px;
    border-radius: 30px;
    user-select: none;
    font-size: calc(0.95rem + 0.1vw);
    font-weight: 600;
}

.project-page-about {
    font-family: Lato;
    margin: 0 auto;
    margin-top: calc(12px + 0.1vw);
    font-size: calc(0.95rem + 0.1vw);
    width: 90vw;
    max-width: 60ch;
    font-weight: 200;
    color: #1a1a1a;
    line-height: calc(1.3rem + 0.2vw);
}

.project-page-about > a {
    color: var(--highlight-color);
    font-weight: 800;
}

.project-page-images {
    display: flex;
    justify-content: space-evenly;
    row-gap: 30px;
    flex-wrap: wrap;
    width: 100%;
    margin: 0 auto;
    margin-top: 20px;
    padding: 0 20px;
}

.project-page-images > a {
    max-width: 22vw;
}

.project-page-image {
    max-width: 22vw;
    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.15);
    border-radius: 8px;
}

#project-page-section-divider {
    position: absolute;
    width: 1px;
    height: 84%;
    background-color: var(--text-dark-color);
    top: 8%;
}

@media (max-width: 1000px) {
    #project-page-section-divider {
        display: none;
    }
    .project-page-image {
        min-width: 85vw;
    }
}


@media (min-width: 1500px) {
    .project-page-links > a {
        font-size: calc(1.9rem + 0.2vw);
    }
    .project-page-subtitle {
        font-size: calc(1.6rem + 1vw);
    }
    .project-page-technology {
        font-size: calc(0.95rem + 0.2vw);
    }
    .project-page-about {
        font-size: calc(0.95rem + 0.25vw);
        line-height: 1.7rem;
        max-width: 70ch;
    }
    .project-page-image, .project-page-images > a  {
        min-width: 400px;
    }
}

